consolidates gradle build adds scheme to ProfileOptions WIP: allow for HTTP2 connections and SSL Factories in client